--- a/index.html
+++ b/index.html
@@ -10,6 +10,43 @@
     <script src="client/scripts/bootstrap.min.js"></script>
 </head>
 <body class="home">
+<header>
+    <nav class="clearfix">
+    <button type="button" class="navbar-toggle btn-style" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar span-style"></span>
+        <span class="icon-bar span-style"></span>
+        <span class="icon-bar span-style"></span>
+    </button>
+        <a class="logo" href="javascript:void(0)"></a>
+    <ul class="collapse navbar-collapse nav-style" id="bs-example-navbar-collapse-1">
+        <li><a href="javascript:void(0)">About Convence</a></li>
+        <li><a href="javascript:void(0)">Take the Tour</a></li>
+        <li><a href="javascript:void(0)">Contact</a></li>
+    </ul>
+    </nav>
+</header>
+<main>
+    <section class="getting">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-7 col-lg-offset-1 col-md-7 col-md-offset-1 col-sm-7 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+                    <h2>Getting things done together  never been so easy!</h2>
+                </div>
+                <ul class="col-lg-3 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-5 col-sm-offset-0 col-xs-8 col-xs-offset-2">
+                    <li class="clearfix"><a href="javascript:void(0)"><span></span>Use your twitter Account</a></li>
+                    <li class="clearfix"><a  href="javascript:void(0)"><span></span>Use your Facebook Account</a></li>
+                    <li class="clearfix"><a  href="javascript:void(0)"><span></span>Use your Google+ Sign In</a></li>
+                    <li class="clearfix"><p>or you can</p></li>
+                    <li class="clearfix"><a href="javascript:void(0)"><span></span>Use your Email Address</a></li>
+                </ul>
+                <div class="col-lg-10 col-lg-offset-1 col-md-11 col-md-offset-1 col-sm-12 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+                    <div class="monitor"></div>
+                </div>
+            </div>
+        </div>
 
+    </section>
+</main>
 </body>
 </html>
