fixed header breakpoints, add events section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Convence</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="client/styles/css/index.css">
     <!--<link rel="shortcut icon" href="client/images/icons/favicon.ico">-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -12,18 +13,19 @@
 <body class="home">
 <header>
     <nav class="clearfix">
-    <button type="button" class="navbar-toggle btn-style" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar span-style"></span>
-        <span class="icon-bar span-style"></span>
-        <span class="icon-bar span-style"></span>
-    </button>
+        <button type="button" class="navbar-toggle btn-style" data-toggle="collapse"
+                data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar span-style"></span>
+            <span class="icon-bar span-style"></span>
+            <span class="icon-bar span-style"></span>
+        </button>
         <a class="logo" href="javascript:void(0)"></a>
-    <ul class="collapse navbar-collapse nav-style" id="bs-example-navbar-collapse-1">
-        <li><a href="javascript:void(0)">About Convence</a></li>
-        <li><a href="javascript:void(0)">Take the Tour</a></li>
-        <li><a href="javascript:void(0)">Contact</a></li>
-    </ul>
+        <ul class="collapse navbar-collapse nav-style" id="bs-example-navbar-collapse-1">
+            <li><a href="javascript:void(0)">About Convence</a></li>
+            <li><a href="javascript:void(0)">Take the Tour</a></li>
+            <li><a href="javascript:void(0)">Contact</a></li>
+        </ul>
     </nav>
 </header>
 <main>
@@ -31,21 +33,54 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 col-lg-offset-1 col-md-7 col-md-offset-1 col-sm-7 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-                    <h2>Getting things done together  never been so easy!</h2>
+                    <h2>Getting things done together never been so easy!</h2>
                 </div>
                 <ul class="col-lg-3 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-5 col-sm-offset-0 col-xs-8 col-xs-offset-2">
                     <li class="clearfix"><a href="javascript:void(0)"><span></span>Use your twitter Account</a></li>
-                    <li class="clearfix"><a  href="javascript:void(0)"><span></span>Use your Facebook Account</a></li>
-                    <li class="clearfix"><a  href="javascript:void(0)"><span></span>Use your Google+ Sign In</a></li>
+                    <li class="clearfix"><a href="javascript:void(0)"><span></span>Use your Facebook Account</a></li>
+                    <li class="clearfix"><a href="javascript:void(0)"><span></span>Use your Google+ Sign In</a></li>
                     <li class="clearfix"><p>or you can</p></li>
                     <li class="clearfix"><a href="javascript:void(0)"><span></span>Use your Email Address</a></li>
                 </ul>
-                <div class="col-lg-10 col-lg-offset-1 col-md-11 col-md-offset-1 col-sm-12 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-                    <div class="monitor"></div>
+                <div class="col-lg-10 col-lg-offset-1 col-md-11 col-md-offset-1 col-sm-12 col-sm-offset-0 col-xs-10 col-xs-offset-1 monitor">
+                    <img src="client/images/monitor.png" alt=""/></div>
                 </div>
+        </div>
+    </section>
+    <section class="events">
+        <div class="container-events">
+            <h2>Life is full of meetings and events - both personal and professional. Now there's a way to manage,
+                participate, and keep track of it all.</h2>
+            <div class="wrapper">
+                    <figure>
+                        <img src="client/images/events/calendar.png" alt="Connect"/>
+                        <figcaption>
+                            <h3>Connect</h3>
+
+                            <p>Sync your calendar and contacts, to meet with anyone, anywhere, anytime - from the
+                                smallest groups to the largest conventions</p>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="client/images/events/notes.png" alt="Collaborate"/>
+                        <figcaption>
+                            <h3>Collaborate</h3>
+
+                            <p>Create agendas, share documents, take notes, and make commitments using the all-in-one
+                                meeting canvas.</p>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="client/images/events/clock.png" alt="Confirm"/>
+                        <figcaption>
+                            <h3>Confirm</h3>
+
+                            <p>Access the history of every meeting, contact, and commitment to know what happened, wat's
+                                next and why matters.</p>
+                        </figcaption>
+                    </figure>
             </div>
         </div>
-
     </section>
 </main>
 </body>
