--- a/client/index.html
+++ b/client/index.html
@@ -36,15 +36,11 @@
                     <h2>Getting things done together never been so easy!</h2>
                 </div>
                 <ul class="col-lg-3 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-5 col-sm-offset-0 col-xs-8 col-xs-offset-2">
-                    <li class="clearfix"><a class="button" href="javascript:void(0)"><span></span>Use your twitter
-                        Account</a></li>
-                    <li class="clearfix"><a class="button" href="javascript:void(0)"><span></span>Use your Facebook
-                        Account</a></li>
-                    <li class="clearfix"><a class="button" href="javascript:void(0)"><span></span>Use your Google+ Sign
-                        In</a></li>
+                    <li class="clearfix"><a href="javascript:void(0)"><span></span>Use your twitter Account</a></li>
+                    <li class="clearfix"><a href="javascript:void(0)"><span></span>Use your Facebook Account</a></li>
+                    <li class="clearfix"><a href="javascript:void(0)"><span></span>Use your Google+ Sign In</a></li>
                     <li class="clearfix"><p>or you can</p></li>
-                    <li class="clearfix"><a class="button" href="javascript:void(0)"><span></span>Use your Email Address</a>
-                    </li>
+                    <li class="clearfix"><a href="javascript:void(0)"><span></span>Use your Email Address</a></li>
                 </ul>
                 <div class="col-lg-10 col-lg-offset-1 col-md-11 col-md-offset-1 col-sm-12 col-sm-offset-0 col-xs-10 col-xs-offset-1 monitor">
                     <img src="client/images/monitor.png" alt=""/></div>
@@ -87,84 +83,143 @@
             </div>
         </div>
     </section>
-    <section class="twitts">
-        <img class="twitter-logo" src="client/images/tweet.png" alt="Tweets about convene"/>
+    <section class="tweets">
+        <img class="twitter-logo"src="client/images/tweet.png" alt="Tweets about convene"/>
 
         <h2>Tweets about Convene</h2>
 
         <div class="container reviews">
             <div class="row">
-                <figure class="col-lg-3 col-lg-offset-0 col-md-3 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-12 col-xs-offset-0 left">
+                <figure class="col-lg-3 col-lg-offset-0 col-md-3 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1 left">
                     <img src="client/images/photo.png" alt="Avatar"/>
                     <figcaption>
                         <p>Vestibulum viverra, mi ac eleifend egestas, nisi mattis dolor, et volutpat.</p>
                     </figcaption>
                 </figure>
-                <figure class="col-lg-3 col-lg-offset-0 col-md-3 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-12 col-xs-offset-0 left">
+                <figure class="col-lg-3 col-lg-offset-0 col-md-3 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1 left">
                     <img src="client/images/photo.png" alt="Avatar"/>
                     <figcaption>
                         <p>Fusce quis tortor eu erpat dignissim verius et luctus augue. Etiam rhoncus consectetur odio a
                             commodo. in.</p>
                     </figcaption>
                 </figure>
-                <figure class="col-lg-3 col-lg-offset-0 col-md-3 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-12 col-xs-offset-0 left">
+                <figure class="col-lg-3 col-lg-offset-0 col-md-3 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1 left">
                     <img src="client/images/photo.png" alt="Avatar"/>
                     <figcaption>
                         <p>Mauris condimentum nunc eu libero tincidunt non iaculis urna faucibus. Donec blandit
                             ultricies libero non </p>
                     </figcaption>
                 </figure>
-                <figure class="col-lg-3 col-lg-offset-0 col-md-3 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-12 col-xs-offset-0 left">
+                <figure class="col-lg-3 col-lg-offset-0 col-md-3 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1 left">
                     <img src="client/images/photo.png" alt="Avatar"/>
                     <figcaption>
                         <p>Phasellus et neque at neque varius accumsan ultrices vel nulla. Proin ante diam, commodo in
                             iaculis sed, egestas eget</p>
                     </figcaption>
                 </figure>
-                <figure class="col-lg-3  col-md-3 col-sm-6 hidden-xs right">
+                <figure class="col-lg-3  col-md-3 col-sm-6 right">
                     <img src="client/images/photo.png" alt="Avatar"/>
                     <figcaption>
                         <p>Vestibulum viverra, mi ac eleifend egestas, nisi mattis dolor, et volutpat.</p>
                     </figcaption>
                 </figure>
-                <figure class="col-lg-3  col-md-3 col-sm-6 hidden-xs right">
+                <figure class="col-lg-3  col-md-3 col-sm-6 right">
                     <img src="client/images/photo.png" alt="Avatar"/>
                     <figcaption>
                         <p>Fusce quis tortor eu erpat dignissim verius et luctus augue. Etiam rhoncus consectetur odio a
                             commodo. in.</p>
                     </figcaption>
                 </figure>
-                <figure class="col-lg-3  col-md-3 col-sm-6 hidden-xs right">
+                <figure class="col-lg-3  col-md-3 col-sm-6 right">
                     <img src="client/images/photo.png" alt="Avatar"/>
                     <figcaption>
                         <p>Mauris condimentum nunc eu libero tincidunt non iaculis urna faucibus. Donec blandit
                             ultricies libero non </p>
                     </figcaption>
                 </figure>
-                <figure class="col-lg-3  col-md-3 col-sm-6 hidden-xs right">
+                <figure class="col-lg-3  col-md-3 col-sm-6 right">
                     <img src="client/images/photo.png" alt="Avatar"/>
                     <figcaption>
                         <p>Phasellus et neque at neque varius accumsan ultrices vel nulla. Proin ante diam, commodo in
                             iaculis sed, egestas eget</p>
                     </figcaption>
                 </figure>
+
             </div>
         </div>
     </section>
-    <section class="tour">
-        <div class="container tour-container">
-            <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-md-5 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
-                    <h2>Interested in learning more about Convene? </h2>
+    <div class="container reviews">
+        <div class="row left">
+            <figure>
+                <div class="col-lg-1 col-md-1 col-sm-2 avatar">
+                    <img src="client/images/photo.png" alt="Avatar"/>
                 </div>
-                <div class="col-lg-2 col-md-2 hidden-sm hidden-xs wave">
+                <figcaption class="col-lg-2 col-md-2 col-sm-4">
+                    <div class="comment">
+                        <p>Vestibulum viverra, mi ac eleifend egestas, nisi mattis dolor, et volutpat.</p>
+                    </div>
+                </figcaption>
+                <div class="col-lg-1 col-md-1 col-sm-2 avatar">
+                    <img src="client/images/photo.png" alt="Avatar"/>
                 </div>
-                <div class="col-lg-3 col-lg-offset-0 col-md-3 col-md-offset-0 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 take">
-                    <a class="button" href="javascript:void(0)">Take the Tour</a>
+                <div class="col-lg-2 col-md-2 col-sm-4">
+                    <div class="comment">
+                        <p>Vestibulum viverra, mi ac eleifend egestas, nisi mattis dolor, et volutpat.</p>
+                    </div>
+                </div>
+                <div class="col-lg-1 col-md-1 col-sm-2 avatar">
+                    <img src="client/images/photo.png" alt="Avatar"/>
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-4 ">
+                    <div class="comment">
+                        <p>Vestibulum viverra, mi ac eleifend egestas, nisi mattis dolor, et volutpat.</p>
+                    </div>
+                </div>
+                <div class="col-lg-1 col-md-1 col-sm-2 avatar">
+                    <img src="client/images/photo.png" alt="Avatar"/>
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-4">
+                    <div class="comment">
+                        <p>Vestibulum viverra, mi ac eleifend egestas, nisi mattis dolor, et volutpat.</p>
+                    </div>
+                </div>
+        </div>
+        <div class="row right">
+            <div class="col-lg-2 col-md-2 col-sm-4">
+                <div class="comment">
+                    <p>Vestibulum viverra, mi ac eleifend egestas, nisi mattis dolor, et volutpat.</p>
                 </div>
             </div>
+            <div class="col-lg-1 col-md-1 col-sm-2 avatar">
+                <img src="client/images/photo.png" alt="Avatar"/>
+            </div>
+            <div class="col-lg-2 col-md-2 col-sm-4">
+                <div class="comment">
+                    <p>Vestibulum viverra, mi ac eleifend egestas, nisi mattis dolor, et volutpat.</p>
+                </div>
+            </div>
+            <div class="col-lg-1 col-md-1  col-sm-2 avatar">
+                <img src="client/images/photo.png" alt="Avatar"/>
+            </div>
+            <div class="col-lg-2 col-md-2 col-sm-4">
+                <div class="comment">
+                    <p>Vestibulum viverra, mi ac eleifend egestas, nisi mattis dolor, et volutpat.</p>
+                </div>
+            </div>
+            <div class="col-lg-1 col-md-1 col-sm-2 avatar">
+                <img src="client/images/photo.png" alt="Avatar"/>
+            </div>
+            <div class="col-lg-2 col-md-2 col-sm-4">
+                <div class="comment">
+                    <p>Vestibulum viverra, mi ac eleifend egestas, nisi mattis dolor, et volutpat.</p>
+                </div>
+            </div>
+            <div class="col-lg-1 col-md-1 col-sm-2 avatar">
+                <img src="client/images/photo.png" alt="Avatar"/>
+            </div>
+
         </div>
-    </section>
+    </div>
 </main>
 </body>
 </html>
