add footer, rename getting to sign-in section, add user-select mixin

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     </nav>
 </header>
 <main>
-    <section class="getting">
+    <section class="sign-in">
         <div class="container">
             <div class="row">
-                <div class="col-lg-7 col-lg-offset-1 col-md-7 col-md-offset-1 col-sm-7 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+                <div class="col-lg-6 col-lg-offset-1 col-md-6 col-md-offset-1 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
                     <h2>Getting things done together never been so easy!</h2>
                 </div>
-                <ul class="col-lg-3 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-5 col-sm-offset-0 col-xs-8 col-xs-offset-2">
+                <ul class="col-lg-3 col-lg-offset-1 col-md-4 col-md-offset-1 col-sm-5 col-sm-offset-1 col-xs-8 col-xs-offset-2">
                     <li class="clearfix"><a class="button" href="javascript:void(0)"><span></span>Use your twitter
                         Account</a></li>
                     <li class="clearfix"><a class="button" href="javascript:void(0)"><span></span>Use your Facebook
@@ -47,7 +47,7 @@
                     </li>
                 </ul>
                 <div class="col-lg-10 col-lg-offset-1 col-md-11 col-md-offset-1 col-sm-12 col-sm-offset-0 col-xs-10 col-xs-offset-1 monitor">
-                    <img src="client/images/monitor.png" alt=""/></div>
+                    <img src="client/images/backgrounds/monitor.png" alt=""/></div>
             </div>
         </div>
     </section>
@@ -88,61 +88,61 @@
         </div>
     </section>
     <section class="twitts">
-        <img class="twitter-logo" src="client/images/tweet.png" alt="Tweets about convene"/>
+        <img class="twitter-logo" src="client/images/twitts/tweet.png" alt="Tweets about convene"/>
 
         <h2>Tweets about Convene</h2>
 
         <div class="container reviews">
             <div class="row">
                 <figure class="col-lg-3 col-lg-offset-0 col-md-3 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-12 col-xs-offset-0 left">
-                    <img src="client/images/photo.png" alt="Avatar"/>
+                    <img src="client/images/twitts/photo.png" alt="Avatar"/>
                     <figcaption>
                         <p>Vestibulum viverra, mi ac eleifend egestas, nisi mattis dolor, et volutpat.</p>
                     </figcaption>
                 </figure>
                 <figure class="col-lg-3 col-lg-offset-0 col-md-3 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-12 col-xs-offset-0 left">
-                    <img src="client/images/photo.png" alt="Avatar"/>
+                    <img src="client/images/twitts/photo.png" alt="Avatar"/>
                     <figcaption>
                         <p>Fusce quis tortor eu erpat dignissim verius et luctus augue. Etiam rhoncus consectetur odio a
                             commodo. in.</p>
                     </figcaption>
                 </figure>
                 <figure class="col-lg-3 col-lg-offset-0 col-md-3 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-12 col-xs-offset-0 left">
-                    <img src="client/images/photo.png" alt="Avatar"/>
+                    <img src="client/images/twitts/photo.png" alt="Avatar"/>
                     <figcaption>
                         <p>Mauris condimentum nunc eu libero tincidunt non iaculis urna faucibus. Donec blandit
                             ultricies libero non </p>
                     </figcaption>
                 </figure>
                 <figure class="col-lg-3 col-lg-offset-0 col-md-3 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-12 col-xs-offset-0 left">
-                    <img src="client/images/photo.png" alt="Avatar"/>
+                    <img src="client/images/twitts/photo.png" alt="Avatar"/>
                     <figcaption>
                         <p>Phasellus et neque at neque varius accumsan ultrices vel nulla. Proin ante diam, commodo in
                             iaculis sed, egestas eget</p>
                     </figcaption>
                 </figure>
                 <figure class="col-lg-3  col-md-3 col-sm-6 hidden-xs right">
-                    <img src="client/images/photo.png" alt="Avatar"/>
+                    <img src="client/images/twitts/photo.png" alt="Avatar"/>
                     <figcaption>
                         <p>Vestibulum viverra, mi ac eleifend egestas, nisi mattis dolor, et volutpat.</p>
                     </figcaption>
                 </figure>
                 <figure class="col-lg-3  col-md-3 col-sm-6 hidden-xs right">
-                    <img src="client/images/photo.png" alt="Avatar"/>
+                    <img src="client/images/twitts/photo.png" alt="Avatar"/>
                     <figcaption>
                         <p>Fusce quis tortor eu erpat dignissim verius et luctus augue. Etiam rhoncus consectetur odio a
                             commodo. in.</p>
                     </figcaption>
                 </figure>
                 <figure class="col-lg-3  col-md-3 col-sm-6 hidden-xs right">
-                    <img src="client/images/photo.png" alt="Avatar"/>
+                    <img src="client/images/twitts/photo.png" alt="Avatar"/>
                     <figcaption>
                         <p>Mauris condimentum nunc eu libero tincidunt non iaculis urna faucibus. Donec blandit
                             ultricies libero non </p>
                     </figcaption>
                 </figure>
                 <figure class="col-lg-3  col-md-3 col-sm-6 hidden-xs right">
-                    <img src="client/images/photo.png" alt="Avatar"/>
+                    <img src="client/images/twitts/photo.png" alt="Avatar"/>
                     <figcaption>
                         <p>Phasellus et neque at neque varius accumsan ultrices vel nulla. Proin ante diam, commodo in
                             iaculis sed, egestas eget</p>
@@ -157,8 +157,7 @@
                 <div class="col-lg-5 col-lg-offset-1 col-md-5 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
                     <h2>Interested in learning more about Convene? </h2>
                 </div>
-                <div class="col-lg-2 col-md-2 hidden-sm hidden-xs wave">
-                </div>
+                <div class="col-lg-2 col-md-2 hidden-sm hidden-xs wave"></div>
                 <div class="col-lg-3 col-lg-offset-0 col-md-3 col-md-offset-0 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 take">
                     <a class="button" href="javascript:void(0)">Take the Tour</a>
                 </div>
@@ -166,5 +165,9 @@
         </div>
     </section>
 </main>
+<footer class="clearfix">
+    <a class="logo" href="javascript:void(0)"></a>
+    <p>All rights reserved © 2013</p>
+</footer>
 </body>
 </html>
