--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@
                     <h2>Getting things done together never been so easy!</h2>
                 </div>
                 <ul class="col-lg-3 col-lg-offset-1 col-md-4 col-md-offset-1 col-sm-5 col-sm-offset-1 col-xs-8 col-xs-offset-2">
-                    <li class="clearfix"><a class="button" href="javascript:void(0)"><span></span>Use your twitter
-                        Account</a></li>
+                    <li class="clearfix">
+                        <a class="button hidden-xs" href="javascript:void(0)"><span></span>Use your twitter
+                        Account</a>
+                        <a class="button hidden-lg hidden-md hidden-sm" href="javascript:void(0)"><span class="l-in"></span>Use your LikedIn
+                            Account</a>
+                    </li>
                     <li class="clearfix"><a class="button" href="javascript:void(0)"><span></span>Use your Facebook
                         Account</a></li>
                     <li class="clearfix"><a class="button" href="javascript:void(0)"><span></span>Use your Google+ Sign
@@ -46,8 +50,11 @@
                     <li class="clearfix"><a class="button" href="javascript:void(0)"><span></span>Use your Email Address</a>
                     </li>
                 </ul>
-                <div class="col-lg-10 col-lg-offset-1 col-md-11 col-md-offset-1 col-sm-12 col-sm-offset-0 col-xs-10 col-xs-offset-1 monitor">
-                    <img src="client/images/backgrounds/monitor.png" alt=""/></div>
+                <div class="col-lg-10 col-lg-offset-1 col-md-11 col-md-offset-1 col-sm-12 col-sm-offset-0 col-xs-10 col-xs-offset-1">
+                    <div class="monitor">
+                        <img src="client/images/backgrounds/monitor.png" alt=""/>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
