--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
                 </div>
                 <ul class="col-lg-3 col-lg-offset-1 col-md-4 col-md-offset-1 col-sm-5 col-sm-offset-1 col-xs-8 col-xs-offset-2">
                     <li class="clearfix">
-                        <a class="button hidden-xs" href="javascript:void(0)"><span></span>Use your twitter
-                        Account</a>
-                        <a class="button hidden-lg hidden-md hidden-sm" href="javascript:void(0)"><span class="l-in"></span>Use your LikedIn
+                        <a class="button" href="javascript:void(0)"><span></span>Use your twitter
                             Account</a>
                     </li>
                     <li class="clearfix"><a class="button" href="javascript:void(0)"><span></span>Use your Facebook
@@ -57,6 +55,32 @@
                 </div>
             </div>
         </div>
+
+    </section>
+    <section class="sign-up">
+        <a class="button-registration" href="javascript:void(0)">Sign Up with Email</a>
+        <a class="button-registration" href="javascript:void(0)">Sign In with Email</a>
+
+        <form action="/" method="post">
+            <div class="input-container">
+                <input type="text" name="Name" placeholder="Your name" required>
+                <span class="sign-up-help"></span>
+            </div>
+            <div class="input-container">
+                <input type="email" name="Email" placeholder="Email Address" required>
+                <span class="sign-up-help"></span>
+            </div>
+            <div class="input-container">
+                <input type="password" name="password" placeholder="Password" required>
+                <span class="sign-up-correct"></span>
+            </div>
+            <div class="input-container">
+                <input type="password" name="password-repeat" placeholder="Repeat Password" required>
+                <span class="sign-up-incorrect"></span>
+            </div>
+            <a class="button" href="javascript:void(0)">Back</a>
+            <button class="button-registration">Sign Up</button>
+        </form>
     </section>
 </div>
 <main>
