rename project, add registration-button  overline, change font-size

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Convence</title>
+    <title>Convene</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -23,8 +23,8 @@
             </button>
             <a class="logo" href="javascript:void(0)"></a>
             <ul class="collapse navbar-collapse nav-style" id="bs-example-navbar-collapse-1">
-                <li><a href="javascript:void(0)">About Convence</a></li>
-                <li><a href="javascript:void(0)">Take the Tour</a></li>
+                <li><a href="javascript:void(0)">About Convene</a></li>
+                <li><a href="#tour">Take the Tour</a></li>
                 <li><a href="javascript:void(0)">Contact</a></li>
             </ul>
         </nav>
@@ -50,12 +50,11 @@
                 </ul>
                 <div class="col-lg-10 col-lg-offset-1 col-md-11 col-md-offset-1 col-sm-12 col-sm-offset-0 col-xs-10 col-xs-offset-1">
                     <div class="monitor">
-                        <img src="client/images/backgrounds/monitor.png" alt=""/>
+                        <img src="client/images/backgrounds/monitor.png" alt="image"/>
                     </div>
                 </div>
             </div>
         </div>
-
     </section>
     <section class="sign-up">
         <a class="button-registration" href="javascript:void(0)">Sign Up with Email</a>
@@ -184,7 +183,7 @@
             </div>
         </div>
     </section>
-    <section class="tour">
+    <section class="tour" id="tour">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-md-5 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
