--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!--<link rel="shortcut icon" href="client/images/icons/favicon.ico">-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="client/scripts/bootstrap.min.js"></script>
+    <script src="client/scripts/popover.js"></script>
 </head>
 <body class="home">
 <div class="shadow">
@@ -33,7 +34,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-1 col-md-6 col-md-offset-1 col-sm-6 col-sm-offset-0 col-xs-10 col-xs-offset-1">
-                    <h2>Getting things done together never been so easy!</h2>
+                    <h2><span>Getting things done together never been so easy!</span></h2>
                 </div>
                 <ul class="col-lg-3 col-lg-offset-1 col-md-4 col-md-offset-1 col-sm-5 col-sm-offset-1 col-xs-8 col-xs-offset-2">
                     <li class="clearfix">
@@ -63,19 +64,19 @@
         <form action="/" method="post">
             <div class="input-container">
                 <input type="text" name="Name" placeholder="Your name" required>
-                <span class="sign-up-help"></span>
+                <a class="sign-up-help" data-toggle="popover" data-content="Mauris condimentum nunc eu libero tincidunt non iaculis urna faucibus. Donec blandit ultricies libero"></a>
             </div>
             <div class="input-container">
                 <input type="email" name="Email" placeholder="Email Address" required>
-                <span class="sign-up-help"></span>
+                <a class="sign-up-help" data-toggle="popover" data-content="Mauris condimentum nunc eu libero tincidunt non iaculis urna faucibus. Donec blandit ultricies libero"></a>
             </div>
             <div class="input-container">
                 <input type="password" name="password" placeholder="Password" required>
-                <span class="sign-up-correct"></span>
+                <a class="sign-up-correct"  data-toggle="popover" data-content="Mauris condimentum nunc eu libero tincidunt non iaculis urna faucibus. Donec blandit ultricies libero"></a>
             </div>
             <div class="input-container">
                 <input type="password" name="password-repeat" placeholder="Repeat Password" required>
-                <span class="sign-up-incorrect"></span>
+                <a class="sign-up-incorrect" data-toggle="popover" data-content="Mauris condimentum nunc eu libero tincidunt non iaculis urna faucibus. Donec blandit ultricies libero"></a>
             </div>
             <a class="button" href="javascript:void(0)">Back</a>
             <button class="button-registration">Sign Up</button>
