--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
                     <h2><span>Getting things done together never been so easy!</span></h2>
                 </div>
                 <ul class="col-lg-3 col-lg-offset-1 col-md-4 col-md-offset-1 col-sm-5 col-sm-offset-1 col-xs-8 col-xs-offset-2">
-                    <li class="clearfix">
-                        <a class="button" href="javascript:void(0)"><span></span>Use your twitter
+                    <li>
+                        <a class="button gray clearfix" href="javascript:void(0)"><span></span>Use your twitter
                             Account</a>
                     </li>
-                    <li class="clearfix"><a class="button" href="javascript:void(0)"><span></span>Use your Facebook
+                    <li><a class="button gray clearfix" href="javascript:void(0)"><span></span>Use your Facebook
                         Account</a></li>
-                    <li class="clearfix"><a class="button" href="javascript:void(0)"><span></span>Use your Google+ Sign
+                    <li><a class="button gray clearfix" href="javascript:void(0)"><span></span>Use your Google+ Sign
                         In</a></li>
-                    <li class="clearfix"><p>or you can</p></li>
-                    <li class="clearfix"><a class="button" href="javascript:void(0)"><span></span>Use your Email Address</a>
+                    <li><p>or you can</p></li>
+                    <li><a class="button gray clearfix" href="javascript:void(0)"><span></span>Use your Email Address</a>
                     </li>
                 </ul>
                 <div class="col-lg-10 col-lg-offset-1 col-md-11 col-md-offset-1 col-sm-12 col-sm-offset-0 col-xs-10 col-xs-offset-1">
@@ -58,28 +58,32 @@
         </div>
     </section>
     <section class="sign-up">
-        <a class="button-registration" href="javascript:void(0)">Sign Up with Email</a>
-        <a class="button-registration" href="javascript:void(0)">Sign In with Email</a>
+        <a class="button blue" href="javascript:void(0)">Sign Up with Email</a>
+        <a class="button blue" href="javascript:void(0)">Sign In with Email</a>
 
         <form action="/" method="post">
             <div class="input-container">
                 <input type="text" name="Name" placeholder="Your name" required>
-                <a class="sign-up-help" data-toggle="popover" data-content="Mauris condimentum nunc eu libero tincidunt non iaculis urna faucibus. Donec blandit ultricies libero"></a>
+                <a class="sign-up-help" data-toggle="popover" data-trigger="click" tabindex="0"
+                   data-content="Mauris condimentum nunc eu libero tincidunt non iaculis urna faucibus. Donec blandit ultricies libero"></a>
             </div>
             <div class="input-container">
                 <input type="email" name="Email" placeholder="Email Address" required>
-                <a class="sign-up-help" data-toggle="popover" data-content="Mauris condimentum nunc eu libero tincidunt non iaculis urna faucibus. Donec blandit ultricies libero"></a>
+                <a class="sign-up-help" data-toggle="popover" data-trigger="click" tabindex="0"
+                   data-content="Mauris condimentum nunc eu libero tincidunt non iaculis urna faucibus. Donec blandit ultricies libero"></a>
             </div>
             <div class="input-container">
                 <input type="password" name="password" placeholder="Password" required>
-                <a class="sign-up-correct"  data-toggle="popover" data-content="Mauris condimentum nunc eu libero tincidunt non iaculis urna faucibus. Donec blandit ultricies libero"></a>
+                <a class="sign-up-correct" data-toggle="popover" data-trigger="click" tabindex="0"
+                   data-content="Mauris condimentum nunc eu libero tincidunt non iaculis urna faucibus. Donec blandit ultricies libero"></a>
             </div>
             <div class="input-container">
                 <input type="password" name="password-repeat" placeholder="Repeat Password" required>
-                <a class="sign-up-incorrect" data-toggle="popover" data-content="Mauris condimentum nunc eu libero tincidunt non iaculis urna faucibus. Donec blandit ultricies libero"></a>
+                <a class="sign-up-incorrect" data-toggle="popover" data-trigger="click" tabindex="0"
+                   data-content="Mauris condimentum nunc eu libero tincidunt non iaculis urna faucibus. Donec blandit ultricies libero"></a>
             </div>
-            <a class="button" href="javascript:void(0)">Back</a>
-            <button class="button-registration">Sign Up</button>
+            <a class="button gray" href="javascript:void(0)">Back</a>
+            <button class="button blue">Sign Up</button>
         </form>
     </section>
 </div>
@@ -192,7 +196,7 @@
                 </div>
                 <div class="col-lg-2 col-md-2 hidden-sm hidden-xs wave"></div>
                 <div class="col-lg-3 col-lg-offset-0 col-md-3 col-md-offset-0 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 take">
-                    <a class="button" href="javascript:void(0)">Take the Tour</a>
+                    <a class="button gray" href="javascript:void(0)">Take the Tour</a>
                 </div>
             </div>
         </div>
@@ -200,9 +204,13 @@
 </main>
 <footer>
     <div class="container">
-        <a class="logo" href="javascript:void(0)"></a>
+        <div class="row">
+            <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
+                <a class="logo" href="javascript:void(0)"></a>
 
-        <p>All rights reserved © 2013</p>
+                <p>All rights reserved © 2013</p>
+            </div>
+        </div>
     </div>
 </footer>
 </body>
